// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for the CreateButton component. Should match snapshot - type === "button". 1`] = `
<div>
  <div
    class="Toastify"
  />
  <button
    class="cursor-pointer bg-dial-iris-blue px-2 py-0.5 rounded text-white"
    data-testid="create-button"
    type="button"
  >
    <svg
      class="inline pb-0.5"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="16"
      />
      <line
        x1="8"
        x2="16"
        y1="12"
        y2="12"
      />
    </svg>
    <span
      class="text-sm px-1"
    >
      Create
    </span>
  </button>
</div>
`;

exports[`Unit test for the CreateButton component. Should match snapshot - type === "link". 1`] = `
<div>
  <div
    class="Toastify"
  />
  <a
    class="cursor-pointer bg-dial-iris-blue px-2 py-0.5 rounded text-white"
    data-testid="create-link"
    href="http://test/"
  >
    <svg
      class="inline pb-0.5"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="16"
      />
      <line
        x1="8"
        x2="16"
        y1="12"
        y2="12"
      />
    </svg>
    <span
      class="text-sm px-1"
    >
      Create
    </span>
  </a>
</div>
`;
